--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.11.0",
     "react-is": "^17.0.2",
     "styled-components": "^5.2.3"
   },
