--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,14 @@ jobs:
           persist-credentials: false
 
       - name: Build
+        env:
+          FB_KEY: ${{ secrets.FB_KEY }}
+          FB_AUTH: ${{ secrets.FB_AUTH }}
+          FB_PID: ${{ secrets.FB_PID }}
+          FB_BUK: ${{ secrets.FB_BUK }}
+          FB_SND: ${{ secrets.FB_SND }}
+          FB_AID: ${{ secrets.FB_AID }}
+
         run: |
           npm ci
           npm run build
@@ -22,12 +30,6 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
           GITHUB_TOKEN: ${{ secrets.ALURAKUT }}
-          FB_KEY: ${{ secrets.FB_KEY }}
-          FB_AUTH: ${{ secrets.FB_AUTH }}
-          FB_PID: ${{ secrets.FB_PID }}
-          FB_BUK: ${{ secrets.FB_BUK }}
-          FB_SND: ${{ secrets.FB_SND }}
-          FB_AID: ${{ secrets.FB_AID }}
           BRANCH: gh-pages
           FOLDER: out
           CLEAN: true
