--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,10 @@ jobs:
         uses: actions/checkout@v2.3.1
         with:
           persist-credentials: false
+      - name: Debug env
+        env:
+          DEBUG: ${{ secrets.FB_PID }}
+        run: echo "$DEBUG"
 
       - name: Build
         env:
@@ -22,7 +26,8 @@ jobs:
           FB_AID: ${{ secrets.FB_AID }}
 
         run: |
-          echo "$FD_AUTH"
+          echo fb_auth
+          echo "$FB_AUTH"
           npm ci
           npm run build
           touch ./out/.nojekyll
