--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.6.1",
     "firebase": "^8.7.1",
     "next": "latest",
     "react": "^17.0.2",
@@ -13,7 +14,8 @@
     "react-hook-form": "^7.11.0",
     "react-is": "^17.0.2",
     "styled-components": "^5.2.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.12.0"
